--- a/templates/formulaire.html
+++ b/templates/formulaire.html
@@ -20,8 +20,19 @@
             <input type="email" name="email" id="email">
         </p>
         <p>
-            <label for="materiel">Choix Materiel</label>
-            
+            <label for="materiel">Choix Materiel:</label>
+            <select name="choix materiel" id="materiel">
+                <option value="Switch">Switch</option>
+                <option value="Serveur">Serveur</option>
+                <option value="Routeur">Routeur</option>
+                <option value="Carte Arduino">Carte Arduino</option>
+            </select>
+        </p>
+        <p>
+            <label for="commentaire">Commentaire: </label>
+            <p>
+           <textarea name="commentaire" id="commentaire" rows="6" cols="50"></textarea>
+            </p>
         </p>
     </form>
 
